[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Images/Enemies/kamaze.png" type="Texture" id=1]
[ext_resource path="res://khitbox.gd" type="Script" id=2]
[ext_resource path="res://kamakaze.gd" type="Script" id=3]
[ext_resource path="res://Assets/Images/boom1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/boom2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/boom3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/explode.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/SHDamage.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/BDamage.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.9518, 94.1854 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70.5236, 141.329 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
scale = Vector2( 0.35, 0.3 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -34.7963, -3.36737 )
shape = SubResource( 1 )

[node name="khitbox" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="khitbox"]
position = Vector2( -37.0412, -1.12247 )
shape = SubResource( 2 )

[node name="boom" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 94.1793, -132.35 )
scale = Vector2( 1.59754, 2.25321 )
frames = SubResource( 3 )
frame = 1

[node name="wait" type="Timer" parent="."]

[node name="booms" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="SH" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="B" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="area_entered" from="khitbox" to="khitbox" method="_on_khitbox_area_entered"]
[connection signal="area_entered" from="khitbox" to="." method="_on_khitbox_area_entered"]
[connection signal="body_entered" from="khitbox" to="khitbox" method="_on_khitbox_body_entered"]
[connection signal="body_entered" from="khitbox" to="." method="_on_khitbox_body_entered"]
[connection signal="timeout" from="wait" to="." method="_on_wait_timeout"]
